_2008_04_22__11_14_43_ Chi-Hsiu Liang

Updated file dependencies

_2008_04_22__10_55_37_ Chi-Hsiu Liang

  * Convert zero-point energy to wavenumber and concentration to number density while parsing.
  * Further clean up some error report messages.
  * Added a function XmlReadPropertyAttribute() to Persistence.h and XmlPersist.h/.cpp for reading attribute of the property
   (such as unit of energy)
  * reset initialization of m_HeatOfReaction to nothing. For dissociation, this value should be NaN if not defined.
  * Added unitConversion.h/.cpp for converting units.

_2008_04_21__10_17_30_ Chi-Hsiu Liang

  * Further tidy up the errorMsg and some previous debug flags.

2008-4-18 David Glowacki

  * replace supermolecule pointers with modelledmolecule pointers
  * alter simplerrkm, remove reference to supermolecule
  * update HSO2 baseline

2008-4-18 David Glowacki

  * clean up reaction manager.cpp
  * clean up mesmerilt.cpp
  * clean up AssociationReaction.cpp

_2008_04_18__11_28_41_ Ch-Hsiu Liang

  * Input the units of concentration by a string instead of meaningless number
  * removed some debugflags

2008-4-18 David Glowacki

  * moved subsidiary reactant 2 from reaction.h to the derived classes association and exchange
  * change ActivationEnergy to ThresholdEnergy

2008-4-18 David Glowacki

  * moved subsidiary product 2 from reaction.h to the derived classes dissociation and exchange

_2008_04_18__09_28_31_ Chi-Hsiu Liang

Change back MesmerHP to double in dMatrix.h

2008-4-17 David Glowacki

  * created pure virtual methods in reaction.h for describing detailed balance in association, isomerization, exchange, and dissociation reactions
  * updated baselines for HSO2 & cyclopropene
  * replace max grain size variable to use member data m_ncolloptrsize in collidingmolecule

2008-4-17 David Glowacki

  * corrected collision operator initialization routine
  * added cyclopropene baseline + input file

2008_04_17__11_44_02_ Chi-Hsiu Liang
